--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <center>
+        <div class="container align-items-center h-100">
+            <h1>Moving Ball Animation</h1>
+
+            <!-- Create the canvas for the ball to bounce in -->
+            <canvas>
+            </canvas>
+        </div>
+    </center>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
