Style the header and the canvas

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <center>
         <div class="container align-items-center h-100">
-            <h1>Moving Ball Animation</h1>
+            <h1 class="text-primary">Moving Ball Animation</h1>
 
             <!-- Create the canvas for the ball to bounce in -->
-            <canvas>
+            <canvas class="bg-info w-75 h-75 m-3 p-3">
             </canvas>
         </div>
     </center>
